--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -1,5 +1,5 @@
-\documentclass[12pt]{acmart}
-%\documentclass[12pt]{volcanica-template}
+%\documentclass[12pt]{acmart}
+\documentclass[12pt]{gji}
 
 \usepackage[english]{babel}
 \usepackage{amsmath, amsfonts, amsthm}
@@ -42,7 +42,7 @@ We evaluate our methodology on three applications: a web administrator, a simple
 
 We introduce our approach on the example of a simple web service.The example is a translation from PHP with embedded SQL commands into SmpSL of code excerpts from the Panda web-administrator. The web service provides several services implemented in dedicated functions for subscribing a user to a newsletter, deleting a newsletter, making a user an admin of a newsletter, sending emails to all subscribed users of a newsletter, etc. We illustrate our verification methodology by exposing an error in the Panda web-administrator. The verification methodology we envision in this paper consists of Table \ref{tab1} maintaining database invariants and Figure \ref{pic1} verifying a contract specification for each function of the web service.
 
-\begin{table}[H]
+\begin{table}
 \caption{Genetic algorithm parameters for simple login script}
     \begin{tabular}{|c|c|}
         \hline
@@ -97,7 +97,7 @@ The database preserves the invariant
 \subsection{Background}
 
 \begin{equation}
-    \int_{\mathbb{R}^n} \exp\left( -\frac{1}{2} x^T A x + b^T x \right) dx = \sqrt{\frac{(2\pi)^n}{\det A}} \exp\left( \frac{1}{2} b^T A^{-1} b \right),
+    \int\limits_{\mathbb{R}^n} \exp\left( -\frac{1}{2} x^T A x + b^T x \right) dx = \sqrt{\frac{(2\pi)^n}{\det A}} \exp\left( \frac{1}{2} b^T A^{-1} b \right),
     \text{where}
     \label{3}
 \end{equation}
@@ -114,7 +114,7 @@ Precision - defined in Equation 1\par
     \item A binary relation name $R$ is interpreted in Figure \ref{pic2}.
 \end{itemize}
 
-\begin{figure}[H]
+\begin{figure}
     \centering
     \includegraphics{Picture2.jpg}
     \caption{PHP Script of Newspaper Display Script}
